<resources>
    <string name="app_name">Running Tracker App</string>
    <string name="google_api_key">AIzaSyBtsoN1jXZeM_ztrsVmqOuoCHpVyRWwSBg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="run">Run</string>
    <string name="statistics">Statistics</string>
    <string name="tracks">Tracks</string>
    <string name="setup">Setup</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="string_setup_welcome_msg">Please enter your name and weight</string>
    <string name="user_name">User name</string>
    <string name="user_weight">User weight</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
    <string name="next">Continue</string>
    <string name="sort_by">Sort By</string>
    <string name="add_new_run">Add new run</string>
    <string name="zero_time">00:00:00</string>
    <string name="total_time">Total Time</string>
    <string name="total_distance">0Km</string>
    <string name="total_distance_lable">Total Distance</string>
    <string name="total_cal">0Kcal</string>
    <string name="total_calories_burnt">Total Calories Burnt</string>
    <string name="avg_spd">0Km/h</string>
    <string name="average_speed">Average Speed</string>
    <string name="your_name">Your name</string>
    <string name="your_weight">Your Weight</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="start">Start</string>
    <string name="timer_start_value">00:00:00:00</string>
    <string name="permission_rationale">Sorry, this permission is required so that you can be able to monitor your runs</string>
    <string name="permission_denied">Permissions Denied</string>
    <string name="permissions_granted">Permissions granted</string>

    <string-array name="runs_sort">
        <item>Date</item>
        <item>Speed</item>
        <item>Distance</item>
        <item>Time</item>
        <item>Calories</item>
    </string-array>
</resources>