<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary_color"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="@dimen/dimen_2dp"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_20dp"
        app:boxCornerRadiusBottomStart="@dimen/dimen_20dp"
        app:boxCornerRadiusTopEnd="@dimen/dimen_20dp"
        app:boxCornerRadiusTopStart="@dimen/dimen_20dp"
        app:boxStrokeColor="@color/white"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/gl_7"
        app:layout_constraintStart_toStartOf="@+id/gl_6"
        app:layout_constraintTop_toTopOf="@+id/gl_4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="text"
            style="@style/text_input_edit_text_settings_page"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_weight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_20dp"
        app:boxCornerRadiusBottomStart="@dimen/dimen_20dp"
        app:boxCornerRadiusTopEnd="@dimen/dimen_20dp"
        app:boxCornerRadiusTopStart="@dimen/dimen_20dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/dimen_2dp"
        app:layout_constraintEnd_toEndOf="@+id/settings_name"
        app:layout_constraintStart_toStartOf="@+id/settings_name"
        app:layout_constraintTop_toBottomOf="@+id/settings_name"
        app:startIconDrawable="@drawable/ic_monitor_weight"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/text_input_edit_text_settings_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/your_weight" />

    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/secondary_color"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/apply_changes"
        app:layout_constraintStart_toStartOf="@+id/settings_weight"
        app:layout_constraintTop_toBottomOf="@+id/settings_weight"
        app:layout_constraintEnd_toEndOf="@+id/settings_weight" />

</androidx.constraintlayout.widget.ConstraintLayout>